fix recycleView bag

--- a/app/src/main/res/layout/item_shop_disabled.xml
+++ b/app/src/main/res/layout/item_shop_disabled.xml
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textColor="#20333D"
+            android:textColor="@color/white"
             android:textSize="16sp"
             android:textStyle="bold" />
         <TextView
@@ -32,7 +32,7 @@
             android:layout_height="wrap_content"
             android:textSize="16sp"
             android:textStyle="bold"
-            android:textColor="#20333D"/>
+            android:textColor="@color/white"/>
 
     </LinearLayout>
 
