--- a/app/src/main/res/layout/activity_add_shop_item.xml
+++ b/app/src/main/res/layout/activity_add_shop_item.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.AddShopItemActivity">
+    tools:context=".presentation.add_shop_item.AddShopItemActivity">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/til_name"
