--- a/app/src/main/res/layout/activity_add_shop_item.xml
+++ b/app/src/main/res/layout/activity_add_shop_item.xml
@@ -5,5 +5,5 @@
     android:id="@+id/shopItemContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.ShopItemFragment"
+    tools:context=".presentation.fragments.ShopItemFragment"
     tools:layout="@layout/fragment_shop_item"/>
